--- a/installer/index.html
+++ b/installer/index.html
@@ -30,10 +30,10 @@
     <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/svg" />
 
     <!-- ===== All CSS files ===== -->
-    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../assets/css/animate.css" />
-    <link rel="stylesheet" href="../../assets/css/lineicons.css" />
-    <link rel="stylesheet" href="../../assets/css/ud-styles.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/animate.css" />
+    <link rel="stylesheet" href="assets/css/lineicons.css" />
+    <link rel="stylesheet" href="assets/css/ud-styles.css" />
     <link rel="stylesheet" href="assets/css/base.css" />
 
 </head>
@@ -46,7 +46,7 @@
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="index.html">
-                            <img src="../../assets/images/logo/logo.svg" style="width: 200px" alt="Logo" />
+                            <!-- <img src="../../assets/images/logo/logo.svg" style="width: 200px" alt="Logo" /> -->
                         </a>
                         <button class="navbar-toggler">
                             <span class="toggler-icon"> </span>
@@ -259,9 +259,9 @@
             </div>
 
             <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
-                <img src="../images/tdisplay.png" alt="tdisplay-image" />
-                <img src="../../assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-1" />
-                <img src="../../assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-2" />
+                <img src="assets/images/bitwatch-menu.png" alt="tdisplay-image" />
+                <!-- <img src="../../assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-1" />
+                <img src="../../assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-2" /> -->
             </div>
         </div>
         </div>
