--- a/installer/index.html
+++ b/installer/index.html
@@ -259,7 +259,7 @@
             </div>
 
             <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
-                <img src="assets/images/bitwatch-menu.png" alt="tdisplay-image" />
+                <img src="assets/images/bitwatch-menu.png" alt="Bitwatch Menu" />
                 <!-- <img src="../../assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-1" />
                 <img src="../../assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-2" /> -->
             </div>
@@ -269,6 +269,66 @@
     </section>
     <!-- ====== Hero End ====== -->
 
+    <!-- ====== Features Start ====== -->
+    <section id="features" class="ud-features">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ud-section-title">
+
+                        <h2>Features</h2>
+                        <p>
+                            Bitwatch features:
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 col-sm-6">
+                    <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
+                        <!-- <div class="ud-feature-icon">
+                            <i class="lni lni-users"></i>
+                        </div> -->
+                        <div class="ud-feature-content">
+                            <h3 class="ud-feature-title">Hidden in plain sight</h3>
+                            <p class="ud-feature-desc">
+                                Doesn't look like a hardware wallet, functions as a watch by default
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-sm-6">
+                    <div class="ud-single-feature wow fadeInUp" data-wow-delay=".15s">
+                        <!-- <div class="ud-feature-icon">
+                            <i class="lni lni-bricks"></i>
+                        </div> -->
+                        <div class="ud-feature-content">
+                            <h3 class="ud-feature-title">Easy setup</h3>
+                            <p class="ud-feature-desc">
+                                Configure via WIFI access point
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-sm-6">
+                    <div class="ud-single-feature wow fadeInUp" data-wow-delay=".2s">
+                        <!-- <div class="ud-feature-icon">
+                            <i class="lni lni-layers"></i>
+                        </div> -->
+                        <div class="ud-feature-content">
+                            <h3 class="ud-feature-title">Use with standard PSBT tools</h3>
+                            <p class="ud-feature-desc">
+                                Sign transactions from Electrum and other watch-only wallets.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ====== Features End ====== -->
 
     <!-- ====== Back To Top Start ====== -->
     <a href="javascript:void(0)" class="back-to-top">
