add favicon, tried changing bootloader

--- a/installer/index.html
+++ b/installer/index.html
@@ -27,7 +27,7 @@
         content="Bitwatch - Free Open Source Bitcoin Signing Device for LilyGo T-Watch" />
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/svg" />
+    <link rel="shortcut icon" href="assets/images/logo/favicon.ico" type="image/png" />
 
     <!-- ===== All CSS files ===== -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -338,9 +338,9 @@
 
     <!-- ====== All Javascript Files ====== -->
     <script type="module" src="https://unpkg.com/esp-web-tools@8.0.6/dist/web/install-button.js?module"></script>
-    <script src="../../assets/js/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/js/wow.min.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script src="assets/js/templates.js"></script>
     <script src="assets/js/ui.js"></script>
